--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
         }
         .info-card {
             position: fixed;
-            background: linear-gradient(135deg, rgba(13, 17, 23, 0.95) 0%, rgba(23, 32, 42, 0.95) 100%);
+            background: linear-gradient(135deg, rgba(13, 17, 23, 0.25) 0%, rgba(23, 32, 42, 0.25) 100%);
             color: #e1e8ed;
             padding: 20px;
             border-radius: 15px;
             display: none;
             pointer-events: none;
-            transform: translate(20px, -50%);
             font-family: 'Segoe UI', Arial, sans-serif;
-            max-width: 400px;
+            max-width: 600px;
             width: 90vw;
             box-sizing: border-box;
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.15);
             border: 1px solid rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(10px);
-            right: 0;
+            -webkit-backdrop-filter: blur(10px);
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
             animation: fadeIn 0.3s ease-out;
         }
         .info-card h2 {
@@ -52,31 +54,28 @@
             margin-top: 15px;
         }
         @keyframes fadeIn {
-            from { opacity: 0; transform: translate(40px, -50%); }
-            to { opacity: 1; transform: translate(20px, -50%); }
+            from { opacity: 0; transform: translateX(-50%) translateY(20px); }
+            to { opacity: 1; transform: translateX(-50%) translateY(0); }
         }
         @media (max-width: 768px) {
             .info-card {
                 width: 85vw;
                 padding: 15px;
-                transform: translate(10px, -50%);
+                bottom: 15px;
+                max-width: none;
             }
             .info-card h2 {
-                font-size: 24px;
+                font-size: 20px;
+                margin-bottom: 10px;
             }
             .info-card p {
                 font-size: 14px;
+                margin-bottom: 10px;
             }
             .info-card .fun-fact {
                 font-size: 12px;
-            }
-        }
-        @media (max-width: 768px) {
-            .info-card {
-                padding: 12px;
-                max-width: 90vw;
-                width: auto;
-                min-width: 200px;
+                padding-top: 10px;
+                margin-top: 10px;
             }
         }
     </style>
